<resources>
    <string name="app_name">DiabeTracker</string>
    <string name="title_add_log_entry">Add Log Entry</string>
    <string name="title_main">Main</string>

    <string name="title_home">Home</string>
    <string name="title_log_book">Logbook</string>
    <string name="title_Reports">Reports</string>
    <string name="title_calculator">Calculator</string>
    <string name="title_wizard">Wizard</string>
    <string name="title_import_export">Import / Export</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>

    <string name="error_value_non_zero">value must be non-zero</string>
    <string name="error_required">* required</string>

    <string name="title_activity_navigation_main">NavigationMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Nav Header</string>
    <string name="nav_header_subtitle">nav.subtitle@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="calculator_instruction_need_input">Enter blood glucose level or carbs intake to get instruction for reaching target blood glucose level.</string>
    <string name="calculator_instruction_dose_needed">Inject %1$d U of insulin to reach target blood glucose level.</string>
    <string name="calculator_instruction_carbs_needed">Immediately eat %1$d grams of carbohydrates to reach target blood glucose level.</string>
    <string name="calculator_instruction_no_dose_needed">You don\'t need any more insulin to reach target blood glucose level.</string>

    <string name="pref_low_bgl_key">lowBgl</string>
    <string name="pref_hypo_bgl_key">hypoBgl</string>
    <string name="pref_target_bgl_key">targetBgl</string>
    <string name="pref_high_bgl_key">highBgl</string>
    <string name="pref_hyper_bgl_key">hyperBgl</string>
    <string name="pref_insulin_sensitivity_factor_key">insulinSensitivityFactor</string>
    <string name="pref_insulin_to_carb_ratio_key">insulinToCarbRatio</string>
    <string name="pref_basal_insulin_code_key">basalInsulinCode</string>
    <string name="pref_bolus_insulin_code_key">bolusInsulinCode</string>
    <string name="pref_unit_of_measurement_code_key">unitOfMeasurementCode</string>
    <string name="pref_bgl_unit_code_key">bglUnitCode</string>
    <string name="pref_first_name_key">firstName</string>
    <string name="pref_last_name_key">lastName</string>
    <string name="pref_weight_key">weight</string>
    <string name="pref_height_key">height</string>

</resources>
